@@ -42,28 +42,8 @@ import static org.apache.solr.cloud.OverseerCollectionProcessor.SHARDS_PROP;
 import static org.apache.solr.common.cloud.ZkNodeProps.makeMap;
 import static org.apache.solr.common.params.CollectionParams.CollectionAction.DELETEREPLICA;
 
-@Ignore("SOLR-6347")
+@Ignore("SOLR-6347,SOLR-6593")
 public class DeleteLastCustomShardedReplicaTest extends AbstractFullDistribZkTestBase {
-  private CloudSolrClient client;
-
-  @BeforeClass
-  public static void beforeThisClass2() throws Exception {
-
-  }
-
-  @Override
-  public void distribSetUp() throws Exception {
-    super.distribSetUp();
-    System.setProperty("numShards", Integer.toString(sliceCount));
-    System.setProperty("solr.xml.persist", "true");
-    client = createCloudClient(null);
-  }
-
-  @Override
-  public void distribTearDown() throws Exception {
-    super.distribTearDown();
-    client.close();
-  }
 
   protected String getSolrXml() {
     return "solr-no-core.xml";
@@ -76,39 +56,41 @@ public class DeleteLastCustomShardedReplicaTest extends AbstractFullDistribZkTes
   @Test
   @ShardsFixed(num = 2)
   public void test() throws Exception {
-    int replicationFactor = 1;
-    int maxShardsPerNode = 5;
+    try (CloudSolrClient client = createCloudClient(null))  {
+      int replicationFactor = 1;
+      int maxShardsPerNode = 5;
 
-    Map<String, Object> props = ZkNodeProps.makeMap(
-        "router.name", ImplicitDocRouter.NAME,
-        ZkStateReader.REPLICATION_FACTOR, replicationFactor,
-        ZkStateReader.MAX_SHARDS_PER_NODE, maxShardsPerNode,
-        NUM_SLICES, 1,
-        SHARDS_PROP,"a,b");
+      Map<String, Object> props = ZkNodeProps.makeMap(
+              "router.name", ImplicitDocRouter.NAME,
+              ZkStateReader.REPLICATION_FACTOR, replicationFactor,
+              ZkStateReader.MAX_SHARDS_PER_NODE, maxShardsPerNode,
+              NUM_SLICES, 1,
+              SHARDS_PROP,"a,b");
 
-    Map<String,List<Integer>> collectionInfos = new HashMap<>();
+      Map<String,List<Integer>> collectionInfos = new HashMap<>();
 
-    String collectionName = "customcollreplicadeletion";
+      String collectionName = "customcollreplicadeletion";
 
-    createCollection(collectionInfos, collectionName, props, client);
+      createCollection(collectionInfos, collectionName, props, client);
 
-    waitForRecoveriesToFinish(collectionName, false);
+      waitForRecoveriesToFinish(collectionName, false);
 
-    DocCollection testcoll = getCommonCloudSolrClient().getZkStateReader()
-        .getClusterState().getCollection(collectionName);
-    Replica replica = testcoll.getSlice("a").getReplicas().iterator().next();
+      DocCollection testcoll = getCommonCloudSolrClient().getZkStateReader()
+              .getClusterState().getCollection(collectionName);
+      Replica replica = testcoll.getSlice("a").getReplicas().iterator().next();
 
-    removeAndWaitForLastReplicaGone(collectionName, replica, "a");
+      removeAndWaitForLastReplicaGone(client, collectionName, replica, "a");
+    }
   }
 
-  protected void removeAndWaitForLastReplicaGone(String COLL_NAME, Replica replica, String shard)
+  protected void removeAndWaitForLastReplicaGone(CloudSolrClient client, String COLL_NAME, Replica replica, String shard)
       throws SolrServerException, IOException, InterruptedException {
     Map m = makeMap("collection", COLL_NAME, "action", DELETEREPLICA.toLower(), "shard",
         shard, "replica", replica.getName());
     SolrParams params = new MapSolrParams(m);
     SolrRequest request = new QueryRequest(params);
     request.setPath("/admin/collections");
-    this.client.request(request);
+    client.request(request);
     long endAt = System.currentTimeMillis() + 3000;
     boolean success = false;
     DocCollection testcoll = null;
